--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.4.0",
     "firebase": "^9.19.1",
     "flowbite": "^1.6.5",
-    "flowbite-react": "^0.0.12",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-icons-kit": "^2.0.0",
+    "react-redux": "^8.1.0",
+    "react-router": "^6.12.1",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.2"
   },
